# WizardSData

./: .gitignore  CHANGELOG.md  README.md  __init__.py  api.html  config.env  config.py  core.py  generator-py  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  usage.html
.github/workflows/: docs.yml
Usage_Examples/: README.md  basic_usage.py
Usage_Examples/example_financial_dataset/: README.md  example_retail_banking.ipynb  myconfiguration.json  test_financial_dataset01_5.json
_modules/wizardsdata/: cli.html  config.html  generator.html
_sources/: api.rst.txt  usage.rst.txt
docs/: api.html  examples.html  examples_gallery.html  genindex.html  index.html  installation.html  py-modindex.html  searchindex.js  usage.html
docs/.github/workflows/: docs.ym  docs.yml
docs/_modules/: index.html
docs/_modules/wizardsdata/: templates.html  utils.html
docs/_sources/: examples.rst.txt  examples_gallery.rst.txt  index.rst.txt  installation.rst.txt
docs/_sources/examples/: retail_banking.rst.txt
docs/examples/: retail_banking.html
docs/notebooks/: example_retail_banking.html
docs/source/: conf.py  examples.rst  index.rst  installation.rst  usage.rst
examples/: basic_usage.py
notebooks/: conversations_dataset.json  createprompts.ipynb  financial_dataset01_2.json
outputs/: financial_dataset01_2.json  test_dataset01.json
profiles/: test01_2.json  test01_5.json
prompts/: financial_01.json  financial_client_01.j2
templates/financial_retail_banking/: create_dataset.py
wizardsdata/: basic_usage.py  config.py  generator.py
wizardsdata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
wizardsdata/prompts/: financial_advisor_01.j2
(+26 files in other folders)
