[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wizardsdata"
version = "0.1.0"
description = "A library for generating synthetic conversational datasets"
readme = "README.md"
authors = [
    {name = "Pere Martra", email = "oopere@gmail.com"}
]
license = {text = "Apache-2.0 license"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0 license",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["dataset", "synthetic data", "conversations", "ai", "llm"]
dependencies = [
    "openai>=1.0.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
export = [
    "datasets>=2.14.0",  # For Hugging Face dataset export
]

[project.urls]
"Homepage" = "https://github.com/peremartra/wizardsdata"
"Bug Tracker" = "https://github.com/peremartra/wizardsdata/issues"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"